Fix tasks drawer z-index (#266)

--- a/digital-workplace-webapps/src/main/webapp/css/main.less
+++ b/digital-workplace-webapps/src/main/webapp/css/main.less
@@ -1525,9 +1525,6 @@ body.open-drawer {
       .v-overlay__scrim {
         position: fixed !important;
       }
-      .theme--dark.v-overlay {
-        z-index: 9999 !important;
-      }
       .theme--light.v-navigation-drawer {
         position: fixed;
         z-index: 9999;
